# sublimate

./: .gitignore  Cargo.toml
src/: main.rs  traits.rs
src/core/: preferences.rs
src/gtk_gui/: application.rs  editor.rs  mod.rs  tree.rs
src/tui/: application.rs  mod.rs
